--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,12 +1,20 @@
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
 click==8.1.3
+Django==4.1.3
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
+image==1.5.33
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+Pillow==9.3.0
+qrcode==7.3.1
+six==1.16.0
 SQLAlchemy==1.4.41
+sqlparse==0.4.3
 Werkzeug==2.2.2
 zipp==3.8.1
